src/parser.output
Terminals unused in grammar

   T_BIT_OPERATOR
   T_SEPERATOR


State 1 conflicts: 1 shift/reduce
State 7 conflicts: 17 shift/reduce
State 67 conflicts: 17 shift/reduce


Grammar

    0 $accept: Program $end

    1 Program: PARTITION Program
    2        | %empty

    3 PARTITION: DEFINITION
    4          | FUNCTIONDEF
    5          | FUNCTIONDEC
    6          | DECLARATION

    7 FUNCTIONDEC: TYPE ID '(' PARAMETERS ')' ';'

    8 FUNCTIONDEF: FUNC_DEF_PREFIX STATEMENTS '}'

    9 FUNC_DEF_PREFIX: TYPE ID '(' PARAMETERS ')' '{'

   10 PARAMETERS: PARAS
   11           | %empty

   12 PARAS: PARAS ',' PARA
   13      | PARA

   14 PARA: TYPE ID

   15 TYPE: TYPE_BASE '*'
   16     | TYPE_BASE

   17 STATEMENTS: STATEMENTS STATEMENT
   18           | STATEMENT
   19           | %empty

   20 STATEMENT: DEFINITION
   21          | EXPRESSION ';'
   22          | IF_BLOCK
   23          | WHILE_BLOCK
   24          | STAT_BODY
   25          | BREAK ';'
   26          | CONTINUE ';'
   27          | FOR_BLOCK
   28          | RETURN_STAT

   29 STAT_BODY: '{' TEMP_M STATEMENTS '}'

   30 TEMP_M: %empty

   31 RETURN_STAT: RETURN EXPRESSION ';'
   32            | RETURN ';'

   33 DECLARATION: STRUCT ID '{' TEMP_STR DEFINITIONS FUNCTIONDEF '}'

   34 TEMP_STR: %empty

   35 DEFINITIONS: DEFINITIONS DEFINITION
   36            | DEFINITION

   37 DEFINITION: TYPE VARIABLES ';'

   38 VARIABLES: VARIABLES ',' VARIABLE
   39          | VARIABLE

   40 VARIABLE: ID
   41         | ID EQUAL EXPRESSION
   42         | '*' ID EQUAL EXPRESSION
   43         | ID ARRS EQUAL LIST
   44         | '*' ID EQUAL LIST
   45         | ID ARRS
   46         | '*' ID

   47 LIST: '{' ACT_PARAS '}'

   48 ARRS: ARRS '[' INT_VALUE ']'
   49     | '[' INT_VALUE ']'

   50 EXPRESSION: FUNCTIONCALL
   51           | ID EQUAL EXPRESSION
   52           | VALUE
   53           | EXPRESSION OPERATOR1 EXPRESSION
   54           | EXPRESSION OPERATOR2 EXPRESSION
   55           | OPERATOR2 EXPRESSION
   56           | T_BOOL_OPERATOR EXPRESSION
   57           | L
   58           | ID T_INCRDECR
   59           | T_INCRDECR ID
   60           | '(' EXPRESSION ')'
   61           | ID
   62           | EXPRESSION T_BOOL_OPERATOR EXPRESSION
   63           | EXPRESSION T_RELATION EXPRESSION

   64 L: L '[' EXPRESSION ']'
   65  | ID '[' EXPRESSION ']'

   66 VALUE: INT_VALUE
   67      | FLOAT_VALUE
   68      | BOOL_VALUE
   69      | STRING

   70 FUNCTIONCALL: ID '(' ACT_PARAS ')'

   71 ACT_PARAS: ACT_PARAS ',' ACT_PARA
   72          | ACT_PARA
   73          | %empty

   74 ACT_PARA: EXPRESSION

   75 IF_BLOCK: IF_PREFIX STATEMENT
   76         | IF_PREFIX STATEMENT ELSE STATEMENT

   77 IF_PREFIX: IF '(' EXPRESSION ')'

   78 WHILE_BLOCK: WHILE_PREFIX STATEMENT

   79 WHILE_PREFIX: WHILE '(' EXPRESSION ')'

   80 FOR_BLOCK: FOR_PREFIX FOR_ITERATES ')' STATEMENT

   81 FOR_PREFIX: FOR '(' FOR_INITIALS ';' EXPRESSION ';'

   82 FOR_INITIALS: FOR_INITIAL
   83             | %empty

   84 FOR_INITIAL: FOR_INITIAL ',' EXPRESSION
   85            | EXPRESSION

   86 FOR_ITERATES: FOR_ITERATE
   87             | %empty

   88 FOR_ITERATE: FOR_ITERATE ',' EXPRESSION
   89            | EXPRESSION


Terminals, with rules where they appear

$end (0) 0
'(' (40) 7 9 60 70 77 79 81
')' (41) 7 9 60 70 77 79 80
'*' (42) 15 42 44 46
',' (44) 12 38 71 84 88
';' (59) 7 21 25 26 31 32 37 81
'[' (91) 48 49 64 65
']' (93) 48 49 64 65
'{' (123) 9 29 33 47
'}' (125) 8 29 33 47
error (256)
LOWER_THAN_ELSE (258)
ELSE (259) 76
ID (260) 7 9 14 33 40 41 42 43 44 45 46 51 58 59 61 65 70
EQUAL (261) 41 42 43 44 51
T_BOOL_OPERATOR (262) 56 62
T_RELATION (263) 63
OPERATOR2 (264) 54 55
OPERATOR1 (265) 53
T_BIT_OPERATOR (266)
T_INCRDECR (267) 58 59
TYPE_BASE (268) 15 16
INT_VALUE (269) 48 49 66
STRING (270) 69
FLOAT_VALUE (271) 67
BOOL_VALUE (272) 68
IF (273) 77
STRUCT (274) 33
WHILE (275) 79
BREAK (276) 25
FOR (277) 81
RETURN (278) 31 32
T_SEPERATOR (279)
CONTINUE (280) 26


Nonterminals, with rules where they appear

$accept (35)
    on left: 0
Program (36)
    on left: 1 2, on right: 0 1
PARTITION (37)
    on left: 3 4 5 6, on right: 1
FUNCTIONDEC (38)
    on left: 7, on right: 5
FUNCTIONDEF (39)
    on left: 8, on right: 4 33
FUNC_DEF_PREFIX (40)
    on left: 9, on right: 8
PARAMETERS (41)
    on left: 10 11, on right: 7 9
PARAS (42)
    on left: 12 13, on right: 10 12
PARA (43)
    on left: 14, on right: 12 13
TYPE (44)
    on left: 15 16, on right: 7 9 14 37
STATEMENTS (45)
    on left: 17 18 19, on right: 8 17 29
STATEMENT (46)
    on left: 20 21 22 23 24 25 26 27 28, on right: 17 18 75 76 78 80
STAT_BODY (47)
    on left: 29, on right: 24
TEMP_M (48)
    on left: 30, on right: 29
RETURN_STAT (49)
    on left: 31 32, on right: 28
DECLARATION (50)
    on left: 33, on right: 6
TEMP_STR (51)
    on left: 34, on right: 33
DEFINITIONS (52)
    on left: 35 36, on right: 33 35
DEFINITION (53)
    on left: 37, on right: 3 20 35 36
VARIABLES (54)
    on left: 38 39, on right: 37 38
VARIABLE (55)
    on left: 40 41 42 43 44 45 46, on right: 38 39
LIST (56)
    on left: 47, on right: 43 44
ARRS (57)
    on left: 48 49, on right: 43 45 48
EXPRESSION (58)
    on left: 50 51 52 53 54 55 56 57 58 59 60 61 62 63, on right: 21
    31 41 42 51 53 54 55 56 60 62 63 64 65 74 77 79 81 84 85 88 89
L (59)
    on left: 64 65, on right: 57 64
VALUE (60)
    on left: 66 67 68 69, on right: 52
FUNCTIONCALL (61)
    on left: 70, on right: 50
ACT_PARAS (62)
    on left: 71 72 73, on right: 47 70 71
ACT_PARA (63)
    on left: 74, on right: 71 72
IF_BLOCK (64)
    on left: 75 76, on right: 22
IF_PREFIX (65)
    on left: 77, on right: 75 76
WHILE_BLOCK (66)
    on left: 78, on right: 23
WHILE_PREFIX (67)
    on left: 79, on right: 78
FOR_BLOCK (68)
    on left: 80, on right: 27
FOR_PREFIX (69)
    on left: 81, on right: 80
FOR_INITIALS (70)
    on left: 82 83, on right: 81
FOR_INITIAL (71)
    on left: 84 85, on right: 82 84
FOR_ITERATES (72)
    on left: 86 87, on right: 80
FOR_ITERATE (73)
    on left: 88 89, on right: 86 88


State 0

    0 $accept: . Program $end

    TYPE_BASE  shift, and go to state 1
    STRUCT     shift, and go to state 2

    $default  reduce using rule 2 (Program)

    Program          go to state 3
    PARTITION        go to state 4
    FUNCTIONDEC      go to state 5
    FUNCTIONDEF      go to state 6
    FUNC_DEF_PREFIX  go to state 7
    TYPE             go to state 8
    DECLARATION      go to state 9
    DEFINITION       go to state 10


State 1

   15 TYPE: TYPE_BASE . '*'
   16     | TYPE_BASE .

    '*'  shift, and go to state 11

    '*'       [reduce using rule 16 (TYPE)]
    $default  reduce using rule 16 (TYPE)


State 2

   33 DECLARATION: STRUCT . ID '{' TEMP_STR DEFINITIONS FUNCTIONDEF '}'

    ID  shift, and go to state 12


State 3

    0 $accept: Program . $end

    $end  shift, and go to state 13


State 4

    1 Program: PARTITION . Program

    TYPE_BASE  shift, and go to state 1
    STRUCT     shift, and go to state 2

    $default  reduce using rule 2 (Program)

    Program          go to state 14
    PARTITION        go to state 4
    FUNCTIONDEC      go to state 5
    FUNCTIONDEF      go to state 6
    FUNC_DEF_PREFIX  go to state 7
    TYPE             go to state 8
    DECLARATION      go to state 9
    DEFINITION       go to state 10


State 5

    5 PARTITION: FUNCTIONDEC .

    $default  reduce using rule 5 (PARTITION)


State 6

    4 PARTITION: FUNCTIONDEF .

    $default  reduce using rule 4 (PARTITION)


State 7

    8 FUNCTIONDEF: FUNC_DEF_PREFIX . STATEMENTS '}'

    ID               shift, and go to state 15
    T_BOOL_OPERATOR  shift, and go to state 16
    OPERATOR2        shift, and go to state 17
    T_INCRDECR       shift, and go to state 18
    TYPE_BASE        shift, and go to state 1
    INT_VALUE        shift, and go to state 19
    STRING           shift, and go to state 20
    FLOAT_VALUE      shift, and go to state 21
    BOOL_VALUE       shift, and go to state 22
    IF               shift, and go to state 23
    WHILE            shift, and go to state 24
    BREAK            shift, and go to state 25
    FOR              shift, and go to state 26
    RETURN           shift, and go to state 27
    CONTINUE         shift, and go to state 28
    '('              shift, and go to state 29
    '{'              shift, and go to state 30

    ID               [reduce using rule 19 (STATEMENTS)]
    T_BOOL_OPERATOR  [reduce using rule 19 (STATEMENTS)]
    OPERATOR2        [reduce using rule 19 (STATEMENTS)]
    T_INCRDECR       [reduce using rule 19 (STATEMENTS)]
    TYPE_BASE        [reduce using rule 19 (STATEMENTS)]
    INT_VALUE        [reduce using rule 19 (STATEMENTS)]
    STRING           [reduce using rule 19 (STATEMENTS)]
    FLOAT_VALUE      [reduce using rule 19 (STATEMENTS)]
    BOOL_VALUE       [reduce using rule 19 (STATEMENTS)]
    IF               [reduce using rule 19 (STATEMENTS)]
    WHILE            [reduce using rule 19 (STATEMENTS)]
    BREAK            [reduce using rule 19 (STATEMENTS)]
    FOR              [reduce using rule 19 (STATEMENTS)]
    RETURN           [reduce using rule 19 (STATEMENTS)]
    CONTINUE         [reduce using rule 19 (STATEMENTS)]
    '('              [reduce using rule 19 (STATEMENTS)]
    '{'              [reduce using rule 19 (STATEMENTS)]
    $default         reduce using rule 19 (STATEMENTS)

    TYPE          go to state 31
    STATEMENTS    go to state 32
    STATEMENT     go to state 33
    STAT_BODY     go to state 34
    RETURN_STAT   go to state 35
    DEFINITION    go to state 36
    EXPRESSION    go to state 37
    L             go to state 38
    VALUE         go to state 39
    FUNCTIONCALL  go to state 40
    IF_BLOCK      go to state 41
    IF_PREFIX     go to state 42
    WHILE_BLOCK   go to state 43
    WHILE_PREFIX  go to state 44
    FOR_BLOCK     go to state 45
    FOR_PREFIX    go to state 46


State 8

    7 FUNCTIONDEC: TYPE . ID '(' PARAMETERS ')' ';'
    9 FUNC_DEF_PREFIX: TYPE . ID '(' PARAMETERS ')' '{'
   37 DEFINITION: TYPE . VARIABLES ';'

    ID   shift, and go to state 47
    '*'  shift, and go to state 48

    VARIABLES  go to state 49
    VARIABLE   go to state 50


State 9

    6 PARTITION: DECLARATION .

    $default  reduce using rule 6 (PARTITION)


State 10

    3 PARTITION: DEFINITION .

    $default  reduce using rule 3 (PARTITION)


State 11

   15 TYPE: TYPE_BASE '*' .

    $default  reduce using rule 15 (TYPE)


State 12

   33 DECLARATION: STRUCT ID . '{' TEMP_STR DEFINITIONS FUNCTIONDEF '}'

    '{'  shift, and go to state 51


State 13

    0 $accept: Program $end .

    $default  accept


State 14

    1 Program: PARTITION Program .

    $default  reduce using rule 1 (Program)


State 15

   51 EXPRESSION: ID . EQUAL EXPRESSION
   58           | ID . T_INCRDECR
   61           | ID .
   65 L: ID . '[' EXPRESSION ']'
   70 FUNCTIONCALL: ID . '(' ACT_PARAS ')'

    EQUAL       shift, and go to state 52
    T_INCRDECR  shift, and go to state 53
    '('         shift, and go to state 54
    '['         shift, and go to state 55

    $default  reduce using rule 61 (EXPRESSION)


State 16

   56 EXPRESSION: T_BOOL_OPERATOR . EXPRESSION

    ID               shift, and go to state 15
    T_BOOL_OPERATOR  shift, and go to state 16
    OPERATOR2        shift, and go to state 17
    T_INCRDECR       shift, and go to state 18
    INT_VALUE        shift, and go to state 19
    STRING           shift, and go to state 20
    FLOAT_VALUE      shift, and go to state 21
    BOOL_VALUE       shift, and go to state 22
    '('              shift, and go to state 29

    EXPRESSION    go to state 56
    L             go to state 38
    VALUE         go to state 39
    FUNCTIONCALL  go to state 40


State 17

   55 EXPRESSION: OPERATOR2 . EXPRESSION

    ID               shift, and go to state 15
    T_BOOL_OPERATOR  shift, and go to state 16
    OPERATOR2        shift, and go to state 17
    T_INCRDECR       shift, and go to state 18
    INT_VALUE        shift, and go to state 19
    STRING           shift, and go to state 20
    FLOAT_VALUE      shift, and go to state 21
    BOOL_VALUE       shift, and go to state 22
    '('              shift, and go to state 29

    EXPRESSION    go to state 57
    L             go to state 38
    VALUE         go to state 39
    FUNCTIONCALL  go to state 40


State 18

   59 EXPRESSION: T_INCRDECR . ID

    ID  shift, and go to state 58


State 19

   66 VALUE: INT_VALUE .

    $default  reduce using rule 66 (VALUE)


State 20

   69 VALUE: STRING .

    $default  reduce using rule 69 (VALUE)


State 21

   67 VALUE: FLOAT_VALUE .

    $default  reduce using rule 67 (VALUE)


State 22

   68 VALUE: BOOL_VALUE .

    $default  reduce using rule 68 (VALUE)


State 23

   77 IF_PREFIX: IF . '(' EXPRESSION ')'

    '('  shift, and go to state 59


State 24

   79 WHILE_PREFIX: WHILE . '(' EXPRESSION ')'

    '('  shift, and go to state 60


State 25

   25 STATEMENT: BREAK . ';'

    ';'  shift, and go to state 61


State 26

   81 FOR_PREFIX: FOR . '(' FOR_INITIALS ';' EXPRESSION ';'

    '('  shift, and go to state 62


State 27

   31 RETURN_STAT: RETURN . EXPRESSION ';'
   32            | RETURN . ';'

    ID               shift, and go to state 15
    T_BOOL_OPERATOR  shift, and go to state 16
    OPERATOR2        shift, and go to state 17
    T_INCRDECR       shift, and go to state 18
    INT_VALUE        shift, and go to state 19
    STRING           shift, and go to state 20
    FLOAT_VALUE      shift, and go to state 21
    BOOL_VALUE       shift, and go to state 22
    '('              shift, and go to state 29
    ';'              shift, and go to state 63

    EXPRESSION    go to state 64
    L             go to state 38
    VALUE         go to state 39
    FUNCTIONCALL  go to state 40


State 28

   26 STATEMENT: CONTINUE . ';'

    ';'  shift, and go to state 65


State 29

   60 EXPRESSION: '(' . EXPRESSION ')'

    ID               shift, and go to state 15
    T_BOOL_OPERATOR  shift, and go to state 16
    OPERATOR2        shift, and go to state 17
    T_INCRDECR       shift, and go to state 18
    INT_VALUE        shift, and go to state 19
    STRING           shift, and go to state 20
    FLOAT_VALUE      shift, and go to state 21
    BOOL_VALUE       shift, and go to state 22
    '('              shift, and go to state 29

    EXPRESSION    go to state 66
    L             go to state 38
    VALUE         go to state 39
    FUNCTIONCALL  go to state 40


State 30

   29 STAT_BODY: '{' . TEMP_M STATEMENTS '}'

    $default  reduce using rule 30 (TEMP_M)

    TEMP_M  go to state 67


State 31

   37 DEFINITION: TYPE . VARIABLES ';'

    ID   shift, and go to state 68
    '*'  shift, and go to state 48

    VARIABLES  go to state 49
    VARIABLE   go to state 50


State 32

    8 FUNCTIONDEF: FUNC_DEF_PREFIX STATEMENTS . '}'
   17 STATEMENTS: STATEMENTS . STATEMENT

    ID               shift, and go to state 15
    T_BOOL_OPERATOR  shift, and go to state 16
    OPERATOR2        shift, and go to state 17
    T_INCRDECR       shift, and go to state 18
    TYPE_BASE        shift, and go to state 1
    INT_VALUE        shift, and go to state 19
    STRING           shift, and go to state 20
    FLOAT_VALUE      shift, and go to state 21
    BOOL_VALUE       shift, and go to state 22
    IF               shift, and go to state 23
    WHILE            shift, and go to state 24
    BREAK            shift, and go to state 25
    FOR              shift, and go to state 26
    RETURN           shift, and go to state 27
    CONTINUE         shift, and go to state 28
    '('              shift, and go to state 29
    '}'              shift, and go to state 69
    '{'              shift, and go to state 30

    TYPE          go to state 31
    STATEMENT     go to state 70
    STAT_BODY     go to state 34
    RETURN_STAT   go to state 35
    DEFINITION    go to state 36
    EXPRESSION    go to state 37
    L             go to state 38
    VALUE         go to state 39
    FUNCTIONCALL  go to state 40
    IF_BLOCK      go to state 41
    IF_PREFIX     go to state 42
    WHILE_BLOCK   go to state 43
    WHILE_PREFIX  go to state 44
    FOR_BLOCK     go to state 45
    FOR_PREFIX    go to state 46


State 33

   18 STATEMENTS: STATEMENT .

    $default  reduce using rule 18 (STATEMENTS)


State 34

   24 STATEMENT: STAT_BODY .

    $default  reduce using rule 24 (STATEMENT)


State 35

   28 STATEMENT: RETURN_STAT .

    $default  reduce using rule 28 (STATEMENT)


State 36

   20 STATEMENT: DEFINITION .

    $default  reduce using rule 20 (STATEMENT)


State 37

   21 STATEMENT: EXPRESSION . ';'
   53 EXPRESSION: EXPRESSION . OPERATOR1 EXPRESSION
   54           | EXPRESSION . OPERATOR2 EXPRESSION
   62           | EXPRESSION . T_BOOL_OPERATOR EXPRESSION
   63           | EXPRESSION . T_RELATION EXPRESSION

    T_BOOL_OPERATOR  shift, and go to state 71
    T_RELATION       shift, and go to state 72
    OPERATOR2        shift, and go to state 73
    OPERATOR1        shift, and go to state 74
    ';'              shift, and go to state 75


State 38

   57 EXPRESSION: L .
   64 L: L . '[' EXPRESSION ']'

    '['  shift, and go to state 76

    $default  reduce using rule 57 (EXPRESSION)


State 39

   52 EXPRESSION: VALUE .

    $default  reduce using rule 52 (EXPRESSION)


State 40

   50 EXPRESSION: FUNCTIONCALL .

    $default  reduce using rule 50 (EXPRESSION)


State 41

   22 STATEMENT: IF_BLOCK .

    $default  reduce using rule 22 (STATEMENT)


State 42

   75 IF_BLOCK: IF_PREFIX . STATEMENT
   76         | IF_PREFIX . STATEMENT ELSE STATEMENT

    ID               shift, and go to state 15
    T_BOOL_OPERATOR  shift, and go to state 16
    OPERATOR2        shift, and go to state 17
    T_INCRDECR       shift, and go to state 18
    TYPE_BASE        shift, and go to state 1
    INT_VALUE        shift, and go to state 19
    STRING           shift, and go to state 20
    FLOAT_VALUE      shift, and go to state 21
    BOOL_VALUE       shift, and go to state 22
    IF               shift, and go to state 23
    WHILE            shift, and go to state 24
    BREAK            shift, and go to state 25
    FOR              shift, and go to state 26
    RETURN           shift, and go to state 27
    CONTINUE         shift, and go to state 28
    '('              shift, and go to state 29
    '{'              shift, and go to state 30

    TYPE          go to state 31
    STATEMENT     go to state 77
    STAT_BODY     go to state 34
    RETURN_STAT   go to state 35
    DEFINITION    go to state 36
    EXPRESSION    go to state 37
    L             go to state 38
    VALUE         go to state 39
    FUNCTIONCALL  go to state 40
    IF_BLOCK      go to state 41
    IF_PREFIX     go to state 42
    WHILE_BLOCK   go to state 43
    WHILE_PREFIX  go to state 44
    FOR_BLOCK     go to state 45
    FOR_PREFIX    go to state 46


State 43

   23 STATEMENT: WHILE_BLOCK .

    $default  reduce using rule 23 (STATEMENT)


State 44

   78 WHILE_BLOCK: WHILE_PREFIX . STATEMENT

    ID               shift, and go to state 15
    T_BOOL_OPERATOR  shift, and go to state 16
    OPERATOR2        shift, and go to state 17
    T_INCRDECR       shift, and go to state 18
    TYPE_BASE        shift, and go to state 1
    INT_VALUE        shift, and go to state 19
    STRING           shift, and go to state 20
    FLOAT_VALUE      shift, and go to state 21
    BOOL_VALUE       shift, and go to state 22
    IF               shift, and go to state 23
    WHILE            shift, and go to state 24
    BREAK            shift, and go to state 25
    FOR              shift, and go to state 26
    RETURN           shift, and go to state 27
    CONTINUE         shift, and go to state 28
    '('              shift, and go to state 29
    '{'              shift, and go to state 30

    TYPE          go to state 31
    STATEMENT     go to state 78
    STAT_BODY     go to state 34
    RETURN_STAT   go to state 35
    DEFINITION    go to state 36
    EXPRESSION    go to state 37
    L             go to state 38
    VALUE         go to state 39
    FUNCTIONCALL  go to state 40
    IF_BLOCK      go to state 41
    IF_PREFIX     go to state 42
    WHILE_BLOCK   go to state 43
    WHILE_PREFIX  go to state 44
    FOR_BLOCK     go to state 45
    FOR_PREFIX    go to state 46


State 45

   27 STATEMENT: FOR_BLOCK .

    $default  reduce using rule 27 (STATEMENT)


State 46

   80 FOR_BLOCK: FOR_PREFIX . FOR_ITERATES ')' STATEMENT

    ID               shift, and go to state 15
    T_BOOL_OPERATOR  shift, and go to state 16
    OPERATOR2        shift, and go to state 17
    T_INCRDECR       shift, and go to state 18
    INT_VALUE        shift, and go to state 19
    STRING           shift, and go to state 20
    FLOAT_VALUE      shift, and go to state 21
    BOOL_VALUE       shift, and go to state 22
    '('              shift, and go to state 29

    $default  reduce using rule 87 (FOR_ITERATES)

    EXPRESSION    go to state 79
    L             go to state 38
    VALUE         go to state 39
    FUNCTIONCALL  go to state 40
    FOR_ITERATES  go to state 80
    FOR_ITERATE   go to state 81


State 47

    7 FUNCTIONDEC: TYPE ID . '(' PARAMETERS ')' ';'
    9 FUNC_DEF_PREFIX: TYPE ID . '(' PARAMETERS ')' '{'
   40 VARIABLE: ID .
   41         | ID . EQUAL EXPRESSION
   43         | ID . ARRS EQUAL LIST
   45         | ID . ARRS

    EQUAL  shift, and go to state 82
    '('    shift, and go to state 83
    '['    shift, and go to state 84

    $default  reduce using rule 40 (VARIABLE)

    ARRS  go to state 85


State 48

   42 VARIABLE: '*' . ID EQUAL EXPRESSION
   44         | '*' . ID EQUAL LIST
   46         | '*' . ID

    ID  shift, and go to state 86


State 49

   37 DEFINITION: TYPE VARIABLES . ';'
   38 VARIABLES: VARIABLES . ',' VARIABLE

    ';'  shift, and go to state 87
    ','  shift, and go to state 88


State 50

   39 VARIABLES: VARIABLE .

    $default  reduce using rule 39 (VARIABLES)


State 51

   33 DECLARATION: STRUCT ID '{' . TEMP_STR DEFINITIONS FUNCTIONDEF '}'

    $default  reduce using rule 34 (TEMP_STR)

    TEMP_STR  go to state 89


State 52

   51 EXPRESSION: ID EQUAL . EXPRESSION

    ID               shift, and go to state 15
    T_BOOL_OPERATOR  shift, and go to state 16
    OPERATOR2        shift, and go to state 17
    T_INCRDECR       shift, and go to state 18
    INT_VALUE        shift, and go to state 19
    STRING           shift, and go to state 20
    FLOAT_VALUE      shift, and go to state 21
    BOOL_VALUE       shift, and go to state 22
    '('              shift, and go to state 29

    EXPRESSION    go to state 90
    L             go to state 38
    VALUE         go to state 39
    FUNCTIONCALL  go to state 40


State 53

   58 EXPRESSION: ID T_INCRDECR .

    $default  reduce using rule 58 (EXPRESSION)


State 54

   70 FUNCTIONCALL: ID '(' . ACT_PARAS ')'

    ID               shift, and go to state 15
    T_BOOL_OPERATOR  shift, and go to state 16
    OPERATOR2        shift, and go to state 17
    T_INCRDECR       shift, and go to state 18
    INT_VALUE        shift, and go to state 19
    STRING           shift, and go to state 20
    FLOAT_VALUE      shift, and go to state 21
    BOOL_VALUE       shift, and go to state 22
    '('              shift, and go to state 29

    $default  reduce using rule 73 (ACT_PARAS)

    EXPRESSION    go to state 91
    L             go to state 38
    VALUE         go to state 39
    FUNCTIONCALL  go to state 40
    ACT_PARAS     go to state 92
    ACT_PARA      go to state 93


State 55

   65 L: ID '[' . EXPRESSION ']'

    ID               shift, and go to state 15
    T_BOOL_OPERATOR  shift, and go to state 16
    OPERATOR2        shift, and go to state 17
    T_INCRDECR       shift, and go to state 18
    INT_VALUE        shift, and go to state 19
    STRING           shift, and go to state 20
    FLOAT_VALUE      shift, and go to state 21
    BOOL_VALUE       shift, and go to state 22
    '('              shift, and go to state 29

    EXPRESSION    go to state 94
    L             go to state 38
    VALUE         go to state 39
    FUNCTIONCALL  go to state 40


State 56

   53 EXPRESSION: EXPRESSION . OPERATOR1 EXPRESSION
   54           | EXPRESSION . OPERATOR2 EXPRESSION
   56           | T_BOOL_OPERATOR EXPRESSION .
   62           | EXPRESSION . T_BOOL_OPERATOR EXPRESSION
   63           | EXPRESSION . T_RELATION EXPRESSION

    T_RELATION  shift, and go to state 72
    OPERATOR2   shift, and go to state 73
    OPERATOR1   shift, and go to state 74

    $default  reduce using rule 56 (EXPRESSION)


State 57

   53 EXPRESSION: EXPRESSION . OPERATOR1 EXPRESSION
   54           | EXPRESSION . OPERATOR2 EXPRESSION
   55           | OPERATOR2 EXPRESSION .
   62           | EXPRESSION . T_BOOL_OPERATOR EXPRESSION
   63           | EXPRESSION . T_RELATION EXPRESSION

    OPERATOR1  shift, and go to state 74

    $default  reduce using rule 55 (EXPRESSION)


State 58

   59 EXPRESSION: T_INCRDECR ID .

    $default  reduce using rule 59 (EXPRESSION)


State 59

   77 IF_PREFIX: IF '(' . EXPRESSION ')'

    ID               shift, and go to state 15
    T_BOOL_OPERATOR  shift, and go to state 16
    OPERATOR2        shift, and go to state 17
    T_INCRDECR       shift, and go to state 18
    INT_VALUE        shift, and go to state 19
    STRING           shift, and go to state 20
    FLOAT_VALUE      shift, and go to state 21
    BOOL_VALUE       shift, and go to state 22
    '('              shift, and go to state 29

    EXPRESSION    go to state 95
    L             go to state 38
    VALUE         go to state 39
    FUNCTIONCALL  go to state 40


State 60

   79 WHILE_PREFIX: WHILE '(' . EXPRESSION ')'

    ID               shift, and go to state 15
    T_BOOL_OPERATOR  shift, and go to state 16
    OPERATOR2        shift, and go to state 17
    T_INCRDECR       shift, and go to state 18
    INT_VALUE        shift, and go to state 19
    STRING           shift, and go to state 20
    FLOAT_VALUE      shift, and go to state 21
    BOOL_VALUE       shift, and go to state 22
    '('              shift, and go to state 29

    EXPRESSION    go to state 96
    L             go to state 38
    VALUE         go to state 39
    FUNCTIONCALL  go to state 40


State 61

   25 STATEMENT: BREAK ';' .

    $default  reduce using rule 25 (STATEMENT)


State 62

   81 FOR_PREFIX: FOR '(' . FOR_INITIALS ';' EXPRESSION ';'

    ID               shift, and go to state 15
    T_BOOL_OPERATOR  shift, and go to state 16
    OPERATOR2        shift, and go to state 17
    T_INCRDECR       shift, and go to state 18
    INT_VALUE        shift, and go to state 19
    STRING           shift, and go to state 20
    FLOAT_VALUE      shift, and go to state 21
    BOOL_VALUE       shift, and go to state 22
    '('              shift, and go to state 29

    $default  reduce using rule 83 (FOR_INITIALS)

    EXPRESSION    go to state 97
    L             go to state 38
    VALUE         go to state 39
    FUNCTIONCALL  go to state 40
    FOR_INITIALS  go to state 98
    FOR_INITIAL   go to state 99


State 63

   32 RETURN_STAT: RETURN ';' .

    $default  reduce using rule 32 (RETURN_STAT)


State 64

   31 RETURN_STAT: RETURN EXPRESSION . ';'
   53 EXPRESSION: EXPRESSION . OPERATOR1 EXPRESSION
   54           | EXPRESSION . OPERATOR2 EXPRESSION
   62           | EXPRESSION . T_BOOL_OPERATOR EXPRESSION
   63           | EXPRESSION . T_RELATION EXPRESSION

    T_BOOL_OPERATOR  shift, and go to state 71
    T_RELATION       shift, and go to state 72
    OPERATOR2        shift, and go to state 73
    OPERATOR1        shift, and go to state 74
    ';'              shift, and go to state 100


State 65

   26 STATEMENT: CONTINUE ';' .

    $default  reduce using rule 26 (STATEMENT)


State 66

   53 EXPRESSION: EXPRESSION . OPERATOR1 EXPRESSION
   54           | EXPRESSION . OPERATOR2 EXPRESSION
   60           | '(' EXPRESSION . ')'
   62           | EXPRESSION . T_BOOL_OPERATOR EXPRESSION
   63           | EXPRESSION . T_RELATION EXPRESSION

    T_BOOL_OPERATOR  shift, and go to state 71
    T_RELATION       shift, and go to state 72
    OPERATOR2        shift, and go to state 73
    OPERATOR1        shift, and go to state 74
    ')'              shift, and go to state 101


State 67

   29 STAT_BODY: '{' TEMP_M . STATEMENTS '}'

    ID               shift, and go to state 15
    T_BOOL_OPERATOR  shift, and go to state 16
    OPERATOR2        shift, and go to state 17
    T_INCRDECR       shift, and go to state 18
    TYPE_BASE        shift, and go to state 1
    INT_VALUE        shift, and go to state 19
    STRING           shift, and go to state 20
    FLOAT_VALUE      shift, and go to state 21
    BOOL_VALUE       shift, and go to state 22
    IF               shift, and go to state 23
    WHILE            shift, and go to state 24
    BREAK            shift, and go to state 25
    FOR              shift, and go to state 26
    RETURN           shift, and go to state 27
    CONTINUE         shift, and go to state 28
    '('              shift, and go to state 29
    '{'              shift, and go to state 30

    ID               [reduce using rule 19 (STATEMENTS)]
    T_BOOL_OPERATOR  [reduce using rule 19 (STATEMENTS)]
    OPERATOR2        [reduce using rule 19 (STATEMENTS)]
    T_INCRDECR       [reduce using rule 19 (STATEMENTS)]
    TYPE_BASE        [reduce using rule 19 (STATEMENTS)]
    INT_VALUE        [reduce using rule 19 (STATEMENTS)]
    STRING           [reduce using rule 19 (STATEMENTS)]
    FLOAT_VALUE      [reduce using rule 19 (STATEMENTS)]
    BOOL_VALUE       [reduce using rule 19 (STATEMENTS)]
    IF               [reduce using rule 19 (STATEMENTS)]
    WHILE            [reduce using rule 19 (STATEMENTS)]
    BREAK            [reduce using rule 19 (STATEMENTS)]
    FOR              [reduce using rule 19 (STATEMENTS)]
    RETURN           [reduce using rule 19 (STATEMENTS)]
    CONTINUE         [reduce using rule 19 (STATEMENTS)]
    '('              [reduce using rule 19 (STATEMENTS)]
    '{'              [reduce using rule 19 (STATEMENTS)]
    $default         reduce using rule 19 (STATEMENTS)
